--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
+    <script src="/jquery.js"></script>
+    <script src="/sugar.js"></script>
     <script src="/script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
